--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -123,7 +123,6 @@ dependencies:
   badges: ^2.0.2
   custom_navigation_bar: ^0.8.2
   get:
-  carousel_slider:
   cached_network_image:
   flutter_colorful_tab: ^0.1.0
   rotated_corner_decoration: ^2.0.0
@@ -149,10 +148,17 @@ dependencies:
   flutter_html: ^3.0.0-alpha.6
   flutter_date_pickers: ^0.4.0
   fluttercontactpicker: ^4.7.0
+  flutter_hooks: ^0.18.5+1
+  carousel_slider: ^4.1.1
 
-#  flutter_native_contact_picker: ^0.0.3
+# payment
+  flutter_checkout_payment: ^1.1.0
+  flutter_credit_card: ^3.0.4
 
 
+
+#  flutter_card_scanner_latest: ^1.0.5
+#  card_scanner: ^1.0.1-prerelease
 
 
 
