--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,8 +90,10 @@ dependencies:
   #  uuid: ^3.0.4
   # Geo
   latlong2: ^0.8.0
-  location: ^4.1.1
+  geolocator: ^8.2.1
+  location: ^4.4.0
   uni_links: ^0.5.1
+  google_maps_flutter: ^2.2.1
   # Lottie And Flare Animation
   lottie: ^1.4.3
   # DI
@@ -130,7 +132,7 @@ dependencies:
   image_cropper:
   flutter_image_compress:
   comment_tree: ^0.3.0
-  dropdown_search: ^5.0.2
+  dropdown_search: ^5.0.3
   tip_dialog: ^4.0.0
   file_picker: ^4.0.0
   #  flutter_downloader: ^1.8.3
@@ -139,6 +141,7 @@ dependencies:
   #  open_file: ^3.2.1
   pin_code_fields: ^7.4.0
   open_file_safe: ^3.2.3
+  custom_info_window: ^1.0.1
 
 
   flutter_bloc: ^7.3.3
@@ -151,8 +154,10 @@ dependencies:
   flutter_hooks: ^0.18.5+1
   carousel_slider: ^4.1.1
   dropdown_button2: ^1.8.5
+  webview_flutter: ^3.0.4
 
-# payment
+
+  # payment
   flutter_checkout_payment: ^1.1.0
   flutter_credit_card: ^3.0.4
   pay: ^1.0.11
@@ -184,7 +189,7 @@ dev_dependencies:
   # Feature Descovery
   #  feature_discovery: ^0.14.0
   lehttp_overrides: ^1.0.2
-
+  permission_handler: ^10.0.0
 flutter_icons:
   android: "ic_launcher"
   ios: true
