--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -72,4 +72,5 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:multidex:2.0.1'
+    implementation "com.google.android.gms:play-services-wallet:18.0.0"
 }
