--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,7 +95,7 @@ dependencies:
   uni_links: ^0.5.1
   google_maps_flutter: ^2.2.1
   # Lottie And Flare Animation
-  lottie: ^1.4.3
+  lottie:
   # DI
   injectable: ^1.4.1
   get_it: ^7.1.3
@@ -161,7 +161,14 @@ dependencies:
   flutter_checkout_payment: ^1.1.0
   flutter_credit_card: ^3.0.4
   pay: ^1.0.11
+  mad_pay:
 
+#  flutter_pay: ^1.0.2
+#  pay_android: ^1.0.8
+
+#dependency_overrides:
+#  pay_android: ^1.0.8
+#  pay_platform_interface: ^1.0.2
 
 
 #  flutter_card_scanner_latest: ^1.0.5
