--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -150,7 +150,9 @@ dependencies:
   getwidget: ^3.0.1
   flutter_html: ^3.0.0-alpha.6
   flutter_date_pickers: ^0.4.0
-  fluttercontactpicker: ^4.7.0
+#  fluttercontactpicker: ^4.7.0
+  flutter_native_contact_picker: ^0.0.3
+
   flutter_hooks: ^0.18.5+1
   carousel_slider: ^4.1.1
   dropdown_button2: ^1.8.5
